# capstone-dummy-web-endpoint

./: .flaskenv  README.md  pyproject.toml
src/capstone_dummy_web_endpoint/: __init__.py
src/capstone_dummy_web_endpoint/models/enums/: emotion.py
src/capstone_dummy_web_endpoint/views/: query.py
